<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist maker</string>

    <!-- Главный экран -->
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <!-- Экран настроек -->
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>

    <!-- Описания иконок для accessibility -->
    <string name="share_icon_desc">Иконка: Поделиться</string>
    <string name="support_icon_desc">Иконка поддержки</string>
    <string name="agreement_icon_desc">Иконка: стрелка вправо</string>

    <!-- Дополнительные -->
    <string name="custom_switcher">Кастомный свитчер</string>

    <!-- Для кнопки "Написать в поддержку" -->
    <string name="support_email">your.email@example.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="choose_email_app">Выберите почтовое приложение</string>

    <!-- Для кнопки "Поделиться приложением" -->
    <string name="share_app_text">Скачай мое приложение Playlist Maker! https://play.google.com/store/apps/details?id=your.package.name</string>
    <string name="share_app_chooser_title">Поделиться приложением через</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Введите запрос</string>
    <string name="search_history">История</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear_icon_desc">Очистить поле</string>
</resources>
