<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSettingsBackground"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSettingsBackground"
        app:title="@string/settings_title"
        app:titleTextColor="?attr/colorSettingsText"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/dark_theme_item"
        style="@style/SettingsMenuItemNonClickable">

        <TextView
            style="@style/SettingsMenuItemText"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorSettingsText"
            android:labelFor="@id/switch_dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_item"
        style="@style/SettingsMenuItem">

        <TextView
            style="@style/SettingsMenuItemText"
            android:text="@string/share_app"
            android:textColor="?attr/colorSettingsText" />

        <ImageView
            style="@style/SettingsMenuItemIcon"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share_icon_desc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/support_item"
        style="@style/SettingsMenuItem">

        <TextView
            style="@style/SettingsMenuItemText"
            android:text="@string/support"
            android:textColor="?attr/colorSettingsText" />

        <ImageView
            style="@style/SettingsMenuItemIcon"
            android:src="@drawable/ic_support"
            android:contentDescription="@string/support_icon_desc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/agreement_item"
        style="@style/SettingsMenuItem">

        <TextView
            style="@style/SettingsMenuItemText"
            android:text="@string/agreement"
            android:textColor="?attr/colorSettingsText" />

        <ImageView
            style="@style/SettingsMenuItemIcon"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/agreement_icon_desc" />
    </LinearLayout>

</LinearLayout>
