<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    android:background="@color/main_background"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSearch"
        style="@style/MainScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:contentDescription="@string/search"
        app:icon="@drawable/ic_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLibrary"
        style="@style/MainScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_spacing"
        android:text="@string/library"
        android:contentDescription="@string/library"
        app:icon="@drawable/ic_folder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSettings"
        style="@style/MainScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:contentDescription="@string/settings"
        app:icon="@drawable/ic_settings" />
</LinearLayout>